--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-css": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-theme-github": "^4.12.3",
+    "@uiw/react-codemirror": "^4.12.3",
     "antd": "^4.23.4",
     "config-ini-parser": "^1.6.1",
     "lodash": "^4.17.21",
